--- a/templates/initiatorname.iscsi.j2
+++ b/templates/initiatorname.iscsi.j2
@@ -2,4 +2,11 @@
 # [ WARNING ]
 # configuration file maintained by Juju
 # local changes will be overwritten.
+#
+# DO NOT EDIT OR REMOVE THIS FILE!
+# If you remove this file, the iSCSI daemon will not start.
+# If you change the InitiatorName, existing access control lists
+# may reject this initiator.  The InitiatorName must be unique
+# for each iSCSI initiator.  Do NOT duplicate iSCSI InitiatorNames.
 ###############################################################################
+InitiatorName={{ initiator_name }}
