--- a/templates/multipath.conf.j2
+++ b/templates/multipath.conf.j2
@@ -35,14 +35,10 @@ defaults {
     delay_wait_checks 12
 }
 devices {
+    {% if conf_devices %}
     device {
-        vendor "PURE"
-        product "FlashArray"
-        fast_io_fail_tmo 10
-        path_grouping_policy "group_by_prio"
-        failback "immediate"
-        prio "alua"
-        hardware_handler "1 alua"
-        max_sectors_kb = 4096
+        {% for key, value in conf_devices.items() %} {{ key }} {{ value }}
+        {% endfor %}
     }
+    {% endif %}
 }
