--- a/templates/iscsid.conf.j2
+++ b/templates/iscsid.conf.j2
@@ -28,3 +28,10 @@ discovery.sendtargets.iscsi.MaxRecvDataSegmentLength = 32768
 node.session.nr_sessions = 1
 node.session.iscsi.FastAbort = {{ node_fastabort }}
 node.session.scan = {{ node_session_scan }}
+{% if auth_authmethod == 'CHAP' %}
+node.session.auth.authmethod = CHAP
+node.session.auth.username = {{ auth_username }}
+node.session.auth.password = {{ auth_password }}
+node.session.auth.username.in = {{ auth_username_in }}
+node.session.auth.password.in = {{ auth_password_in }}
+{% endif %}
