--- a/templates/multipath.conf.j2
+++ b/templates/multipath.conf.j2
@@ -4,44 +4,30 @@
 # local changes will be overwritten.
 ###############################################################################
 defaults {
-    polling_interval 10
-    path_selector "round-robin 0"
-    path_grouping_policy multibus
-    uid_attribute "ID_SERIAL"
-    getuid_callout "/lib/udev/scsi_id --whitelisted --device=/dev/%n"
-    features    "0"
-    path_checker directio
-    rr_min_io 100
-    rr_min_io_rq 1
-    flush_on_last_del yes
-    max_fds 8192
-    rr_weight priorities
-    failback immediate
-    no_path_retry fail
-    queue_without_daemon no
-    user_friendly_names yes
-    mode 0644
-    uid 0
-    gid disk
-    alias_prefix mpath
-    checker_timeout 60
-    fast_io_fail_tmo 5
-    dev_loss_tmo 120
-    force_sync yes
-    delay_watch_checks 12
-    delay_wait_checks 12
-}
-{% if conf_blacklist -%}
-blacklist {
-    {% for key, value in conf_blacklist.items() %} {{ key }} {{ value }}
+    {% for key, value in defaults.items() %} {{ key }} {{ value }}
     {% endfor %}
 }
-{% endif -%}
-devices {
-    {% if conf_devices -%}
+{% if blacklist -%}
+blacklist {
     device {
-        {% for key, value in conf_devices.items() %} {{ key }} {{ value }}
+        {% for key, value in blacklist.items() %} {{ key }} {{ value }}
         {% endfor %}
     }
-    {% endif -%}
 }
+{% endif -%}
+{% if devices -%}
+devices {
+    device {
+        {% for key, value in devices.items() %} {{ key }} {{ value }}
+        {% endfor %}
+    }
+}
+{% endif -%}
+{% if multipaths -%}
+multipaths {
+    multipath {
+        {% for key, value in multipaths.items() %} {{ key }} {{ value }}
+        {% endfor %}
+    }
+}
+{% endif -%}
